# Rust_Bitcoin_Mining

./: .gitignore  Beschreibung.txt  Pool_Test_Access  README.md
Code/: lib.rs  main.rs
rust_miner/: Cargo.toml  Zugangsdaten Pool
rust_miner/src/: connect.rs  job.rs  main.rs  miner.rs
