[package]
name = "rust_miner"
version = "1.1.5"
authors = ["Andrik Seeger, Tom Schubert"]
edition = "2021"

[lib]
name = "lib" # The name of the target.
path = "src/lib.rs" 

[[bin]]
name = "ita_bitcoinminer"
path= "src/main.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.126", features = ["derive"] }
hex = "0.4"
crypto-hash = "0.3.4"
num-bigint = "0.4.0"

